--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
         android:id="@+id/peerListView"
         android:layout_width="match_parent"
         android:layout_height="125dp"
+        android:layout_below="@+id/displayName"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/onOff"
-        android:layout_marginTop="25dp"
-        android:background="@android:color/holo_purple" />
+        android:layout_marginTop="12dp"
+        android:background="#F8C8DC" />
 
     <ListView
         android:id="@+id/readMsg"
@@ -47,19 +47,23 @@
     <EditText
         android:id="@+id/writeMsg"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_toStartOf="@+id/sendButton"
+        android:background="#D8BFD8"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_toStartOf="@+id/sendButton" />
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/readMsg"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
         android:text="Send" />
 
     <TextView
@@ -74,4 +78,30 @@
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp"
         android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/displayNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/peerListView"
+        android:layout_below="@+id/onOff"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
+        android:text="Display Name:"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/displayName"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_below="@+id/onOff"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toEndOf="@+id/displayNameText"
+        android:background="#D8BFD8"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Anonymous"/>
 </RelativeLayout>
