--- a/app/src/main/res/layout/connectedview.xml
+++ b/app/src/main/res/layout/connectedview.xml
@@ -3,35 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/onOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="55dp"
-        android:text="Wifi On" />
-
-    <Button
-        android:id="@+id/discover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/onOff"
-        android:layout_alignBottom="@+id/onOff"
-        android:layout_marginStart="180dp"
-        android:layout_toEndOf="@+id/onOff"
-        android:text="discover" />
-
-    <ListView
-        android:id="@+id/peerListView"
-        android:layout_width="match_parent"
-        android:layout_height="125dp"
-        android:layout_below="@+id/displayName"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp"
-        android:background="#A17B8B" />
-
     <ListView
         android:id="@+id/readMsg"
         android:layout_width="wrap_content"
@@ -40,9 +11,9 @@
         android:layout_below="@+id/peerListView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginHorizontal="10dp"/>
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="12dp" />
 
     <EditText
         android:id="@+id/writeMsg"
@@ -88,7 +59,7 @@
         android:layout_above="@+id/peerListView"
         android:layout_below="@+id/onOff"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="55dp"
         android:text="Display Name: "
         android:textSize="20sp" />
 
@@ -99,7 +70,7 @@
         android:layout_below="@+id/onOff"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/displayNameText"
         android:background="#D8BFD8"
